[tool.poetry]
name = "classical-music-corpus-clustering"
version = "0.1.0"
description = ""
authors = ["Guilherme Marthe <guilherme.cqmarthe@thoughtworks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
ms3 = "^2.5.3"
fsspec = "^2024.9.0"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.27.0"
black = "^24.8.0"
ruff = "^0.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
